Run pre-commit hooks over all files

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,4 +4,4 @@ line_length=88
 lines_after_imports=2
 multi_line_output=3
 no_lines_before=LOCALFOLDER
-known_third_party = 
+known_third_party =jsonschema,setuptools
