--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ python:
 matrix:
   allow_failures:
     - python: 3.8-dev
+cache:
+  directories:
+    - $HOME/.cache/pre-commit
 install:
   - pip install -U pip pipenv
   - pipenv install --dev --skip-lock
